# alphazero_zipfs_law

./: .gitignore  README.md  capture_distribution.py  count_inference_states.py  count_states.py  cutoff_ablation.py  elo_scores.py  game_data_analysis_erase.py  generate_all_plots.py  generate_temp_matches.py  late_turn_loss.py  plot_alpha_beta_time.py  plot_buffer_sampling.py  plot_fast.py  plot_from_script.py  plot_loss_histogram.py  plot_policy_degradation.py  plot_resignation.py  plot_restignation.py  plot_solver_value_loss .py  plot_solver_value_loss.py  plot_theory.py  plot_turns_left.py  plot_value_loss.py  plot_value_loss_new.py  plot_zipfs_law.py  pyproject.toml  requirements.txt  train_with_sampling.py
alphazero_scaling/: loading.py  solver_bot.py
config/: config.yaml  example_config.yaml
data_analysis/: game_data_analysis.py  gather_agent_data.py  utils.py
src/: generate_all_plots.py
src/alphazero_scaling/: alphazero_base.py  kl_sampling.py  loading.py  matches.py  train_with_sampling.py
src/alphazero_scaling/alphazero_mods/: mixed_methods.py  policy_sampling.py  resignation.py  turn_cutoff.py  uniform_sampling.py
src/alphazero_scaling/elo/: calc_elo.py  plotting.py  utils.py
src/alphazero_scaling/model_training/: generate_temp_matches.py
src/config/: config.yaml  example_config.yaml  example_paths.yaml
src/data_analysis/: data_utils.py  game_data_analysis.py  gather_agent_data.py  solver_game_turns.py  state_counter.py  utils.py  value_prediction.py
src/general/: general_utils.py
src/plotting/: board_positions.py  plot_utils.py  utils.py
(+29 files in other folders)
